--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -1,5 +1,5 @@
-kind: Deployment
 apiVersion: apps/v1
+kind: Deployment
 metadata:
   name: hello-world-nextjs
   labels:
@@ -17,10 +17,9 @@ spec:
     spec:
       containers:
         - name: hello-world-nextjs
-          image: >-
-            quay.io/tonykhbo0/hello-world-nextjs@sha256:0f63e7bd343dcf11b2cb29a2b65004179db0162edfeea3ebfeaec1435e160e0d
+          image: owaiskhan84/hello-world-nextjs:latest  # Update to your Docker Hub repo
           ports:
-            - containerPort: 8080
+            - containerPort: 3000  # Assuming your app runs on port 3000
               protocol: TCP
           resources: {}
           terminationMessagePath: /dev/termination-log
