--- a/manifests/service.yaml
+++ b/manifests/service.yaml
@@ -6,9 +6,9 @@ metadata:
     app: hello-world-nextjs
 spec:
   ports:
-    - name: 3000-tcp
+    - name: http
       protocol: TCP
-      port: 3000
+      port: 80
       targetPort: 3000
   selector:
     app: hello-world-nextjs
