--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
+    "test": "jest"
   },
   "dependencies": {
     "next": "10.0.9",
