--- a/manifests/route.yaml
+++ b/manifests/route.yaml
@@ -1,7 +1,7 @@
 kind: Route
 apiVersion: route.openshift.io/v1
 metadata:
-  name: hello-world-nextjs-route
+  name: hello-world-nextjs-svc
   labels:
     app: hello-world-nextjs
 spec:
