--- a/manifests/route.yaml
+++ b/manifests/route.yaml
@@ -2,6 +2,7 @@ kind: Route
 apiVersion: route.openshift.io/v1
 metadata:
   name: hello-world-nextjs-route
+  namespace: webapps
   labels:
     app: hello-world-nextjs
 spec:
