--- a/manifests/route.yaml
+++ b/manifests/route.yaml
@@ -1,5 +1,5 @@
 kind: Route
-apiVersion: route.openshift.io/v1
+apiVersion: github.com/openshift/api/route/v1
 metadata:
   name: hello-world-nextjs-route
   namespace: webapps
